--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -2,6 +2,15 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+}
+
+app {
+    display: block;
+    height: 100%;
+    overflow: hidden;
 }
 
 h1:focus {
